change views and group info

--- a/VkModule/templates/VkModule/group_info.html
+++ b/VkModule/templates/VkModule/group_info.html
@@ -25,7 +25,7 @@
     вошли в группу
     {% for person in change.new_persons %}
         <div STYLE="display:inline-block">
-            <a href="vk.com/{{ person }}">{{ person }}</a> ///
+            <a href="https://vk.com/{{ person }}">{{ person }}</a> ///
         </div>
     {% endfor %}
     {{ change.date }}
