--- a/VkModule/templates/VkModule/group_info.html
+++ b/VkModule/templates/VkModule/group_info.html
@@ -5,7 +5,7 @@
     <title>информация о группе</title>
 </head>
 <body>
-{{ group.group_id }}
+{{ group.group_name }}
 <div style="padding-left: 5%; display:inline-block"><a href="/">&lt&lt;назад</a></div>
 <div style="padding-left: 90%">
 <form action="/{{ group.group_id }}/delete" method="POST">{% csrf_token %}
