--- a/VkModule/templates/VkModule/group_info.html
+++ b/VkModule/templates/VkModule/group_info.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>информация о группе</title>
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}"/>
-
 </head>
 <body>
 {{ group.group_name }}
@@ -17,46 +16,42 @@
     </form>
 </div>
 {% if changes %}
-    <table class="table">
-        <tr>
-            <th>событие</th>
-            <th>участники</th>
-            <th>дата</th>
-        </tr>
+{#    <table class="table" style="margin-top: -5%">#}
+{#        <tr>#}
+{#            <th>событие</th>#}
+{#            <th>участники</th>#}
+{#        </tr>#}
         {% for change in changes %}
-            <tr>
-                <td>
+{#            <tr>#}
+{#                <td>#}
                     вышли из группы
-                </td>
-                <td>
+{#                </td>#}
+{#                <td>#}
                     {% for person in change.delete_persons %}
                         <div STYLE="display:inline-block">
                             <a href="https://vk.com/id{{ person }}">{{ person }}</a> ///
                         </div>
                     {% endfor %}
-                </td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>
+{#                </td>#}
+{#                <td></td>#}
+{#            </tr>#}
+{#            <tr>#}
+{#                <td>#}
                     вошли в группу
-                </td>
-                <td>
+{#                </td>#}
+{#                <td>#}
                     {% for person in change.new_persons %}
                         <div STYLE="display:inline-block">
                             <a href="https://vk.com/id{{ person }}">{{ person }}</a> ///
                         </div>
                     {% endfor %}
-                <hr>
-                </td>
-                <td>
                     {{ change.date }}
-                    <hr>
-                </td>
-            </tr>
-            <br>
+{#                    <hr>#}
+{#                </td>#}
+{#            </tr>#}
+{#            <br>#}
         {% endfor %}
-    </table>
+{#    </table>#}
 {% endif %}
 <form action="{{ group.group_id }}/change" method="POST">{% csrf_token %}
     <input type="hidden" name="group_id" value="{{ group.group_id }}">
