--- a/VkModule/templates/VkModule/group_info.html
+++ b/VkModule/templates/VkModule/group_info.html
@@ -15,9 +15,8 @@
         <input style="color: red; background-color: black" type="submit" value="удалить группу">
     </form>
 </div>
-
 {% if changes %}
-    <table class="table" style="margin-top: -5%">
+    <table class="table">
         <tr>
             <th>событие</th>
             <th>участники</th>
