--- a/VkModule/templates/VkModule/group_info.html
+++ b/VkModule/templates/VkModule/group_info.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>информация о группе</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}"/>
 </head>
 <body>
 {{ group.group_name }}
