--- a/VkModule/templates/VkModule/group_info.html
+++ b/VkModule/templates/VkModule/group_info.html
@@ -24,7 +24,7 @@
         {% for change in changes %}
             <tr>
                 <td>
-                    вышли из группы
+                    ушли
                 </td>
                 <td>
                     {% for person in change.delete_persons %}
@@ -36,7 +36,7 @@
             </tr>
             <tr>
                 <td>
-                    вошли в группу
+                    пришли
                 </td>
                 <td>
                     {% for person in change.new_persons %}
