--- a/VkModule/templates/VkModule/empty.html
+++ b/VkModule/templates/VkModule/empty.html
@@ -5,7 +5,10 @@
     <title>добавь группу</title>
 </head>
 <body>
-добавь группу!!!!
+{% if back %}
+    <div style="padding-left: 5%; display:inline-block"><a href="/">&lt&lt;назад</a></div>
+{% endif %}
+добавить группу
 <form action="{% url 'VkModule:add_group' %}" method="POST">{% csrf_token %}
     {{ f.as_p }}
     <input type="submit" value="добавить группу">
