--- a/VkModule/templates/VkModule/group_info.html
+++ b/VkModule/templates/VkModule/group_info.html
@@ -45,7 +45,7 @@
                         </div>
                     {% endfor %}
                     <br>
-                    {{ change.date }}
+                    {{ change.date|date:"d F Y H:m" }}
                 </td>
             </tr>
         {% endfor %}
