--- a/VkModule/templates/VkModule/group_info.html
+++ b/VkModule/templates/VkModule/group_info.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <title>информация о группе</title>
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}"/>
+    <script src="{% static 'js/MyScript.js' %}"></script>
 </head>
 <body>
-{{ group.group_name }} [{{ group.comment}}]
+{{ group.group_name }} [{{ group.comment }}]
 <div style="padding-left: 5%; display:inline-block"><a href="/">&lt&lt;назад</a></div>
 <div style="padding-left: 90%">
     <form action="/{{ group.group_id }}/delete" method="POST">{% csrf_token %}
@@ -15,6 +16,8 @@
         <input style="color: red; background-color: black" type="submit" value="удалить группу">
     </form>
 </div>
+<br>
+<div class="logout" style="margin-left: 90%"><a href="{% url 'VkModule:logout' %}">Выйти</a></div>
 {% if changes %}
     <table class="table">
         <tr>
@@ -45,7 +48,7 @@
                         </div>
                     {% endfor %}
                     <br>
-                    {{ change.date|date:"d F Y H:m" }}
+                    {{ change.date|date:"d F Y H:i" }}
                 </td>
             </tr>
         {% endfor %}
@@ -53,7 +56,8 @@
 {% endif %}
 <form action="{{ group.group_id }}/change" method="POST">{% csrf_token %}
     <input type="hidden" name="group_id" value="{{ group.group_id }}">
-    <input type="submit" value="сделать замер">
+    <input type="hidden" name="time" id="time">
+    <input type="submit" value="сделать замер" onclick="startTime(); return true;">
 </form>
 </body>
 </html>
