--- a/VkModule/templates/VkModule/groups.html
+++ b/VkModule/templates/VkModule/groups.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>control groups</title>
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}"/>
+{#    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}"/>#}
     <script src="{% static 'js/MyScript.js' %}"></script>
 </head>
 <body>
